# Retail-Shelf-Monitoring

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  docker-compose.yml  launch_ui.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: clean_architecture_instructions.md  copilot-instructions.md
.github/workflows/: deploy-mkdocs.yml  deploy-to-user-pages.yml
docs/: dependency_injection.md  desktop_guide.md  index.md  project_description.md  project_tree.md  shelf_aligner.md  sku_detection.md  stream_example.py  technical_report.md  ui_usecase_integration.md
examples/: phase3_demo.py  phase4_demo.py  phase5_demo.py  sku_detection_example.py
retail_shelf_monitoring/: __main__.py  container.py
retail_shelf_monitoring/adaptors/: keyframe_selector.py
retail_shelf_monitoring/adaptors/grid/: __init__.py  clustering.py
retail_shelf_monitoring/adaptors/messaging/: __init__.py  alert_publisher.py  redis_stream.py
retail_shelf_monitoring/adaptors/ml/: __init__.py  model_loader.py  sku_detector.py  sku_mapper.py  yolo_detector.py
retail_shelf_monitoring/adaptors/preprocessing/: __init__.py  image_processing.py  stabilization.py
retail_shelf_monitoring/entities/: __init__.py  alert.py  common.py  detection.py  frame.py  planogram.py  shelf.py  sku.py  stream.py
retail_shelf_monitoring/frameworks/: config.py  database.py  exceptions.py  logging_config.py
retail_shelf_monitoring/usecases/: alert_generation.py  cell_state_computation.py  detection_processing.py  planogram_generation.py  shelf_localization.py  shelf_management.py  stream_processing.py  temporal_consensus.py
template_project/: __init__.py  __main__.py  container.py
template_project/frameworks/: logging_config.py
tests/integration/: test_end_to_end.py  test_pytorch_tensorrt.py  test_yolo_detector_integration.py
tests/unit/adaptors/: test_clustering.py  (+4 more)
(+59 files in other folders)
